src/tui/snapshots/toker__tui__view__tests__frame_100x30.snap
---
source: src/tui/view.rs
expression: "rows.join(\"\\n\")"
---
 ?  last 30m · 2 sessions · 38 requests                                  last req no data · 12:34:56
┌SESSIONS──────────────────────────────────────────────────────────────────────────────────────────┐
│session                                   ctx model        reqs prompt now    peak msgs ↺ out idle│
│-                                           ? z-ai/glm-5.3    1          ?       ?    - -   ?  45s│
│ses-abc                                     ? z-ai/glm-5.3   37          ? 112,345    - - 678   1m│
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌CONTEXT───────────────────────────────────────────────────────────────────────────────────────────┐
│ses-abc                               ? / ?                                                       │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌TOKENS────────────────────────────────────────────────────────────────────────────────────────────┐
│fresh input          ≥12,845  ▬▬▬▬                                  11%  36 req unknown           │
│cache read          ≥100,000  ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬      89%  37 req unknown           │
│cache write 1h            ≥0                                         0%  38 req unknown           │
│cache write 5m            ≥0                                         0%  38 req unknown           │
│output                  ≥678  37 req unknown                                                      │
│hit rate              100.0%  ███████████████████████████████████████████████ of reusable prefix  │
│missed                     0  rewritten · 0/req · 37 of 38 req reused nothing                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌CACHE REBUILDS──────────────────────────────────┐┌SPEND───────────────────────────────────────────┐
│no rebuild data yet                             ││billed: $0.002130 (1 req)                       │
│                                                ││no cost data: 37 reqs                           │
│                                                ││openrouter · z-ai/glm-5.3  $0.002130 · 1 req    │
└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
┌RATE & QUOTA──────────────────────────────────────────────────────────────────────────────────────┐
│  requests ·····················▁▂▃▄▅▆▇█▁ 1.3/min  1 error                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
