src/tui/snapshots/toker__tui__view__tests__full_frame_120x40.snap
---
source: src/tui/view.rs
expression: "rows.join(\"\\n\")"
---
last 30m · 4 sessions · 1 idle · 12 requests                                                 last req no data · 12:34:56
┌SESSIONS──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│session                                                    ctx model         reqs prompt now    peak msgs ↺   out idle│
│ses-free                                                    1M sonnet-5 $       3      2,500   2,500    - -    60   1m│
│ses-hot                                                     1M opus-5 ↑         3    470,893 472,000   77 1 2,304   1m│
│ses-myst                                                     ? gpt-5.6-terra    3      3,132   3,132    - -    40   2m│
│ses-crow                                                  200k haiku-4-5        3    170,000 170,000    - -   100  10m│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌CONTEXT───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ses-free                  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░         2,500 / 1M     0%              │
│ses-hot                   ████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░       470,893 / 1M    47%              │
│ses-myst                          3,132 / ?                                                                           │
│ses-crow                  ████████████████████████████████████████████░░░░░░░░       170,000 / 200k  85%  idle 10m    │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌TOKENS────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│fresh input           31,493  ▬                                                                          2%           │
│cache read         1,608,393  ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬       93%           │
│cache write 1h        87,000  ▬▬▬▬                                                                       5%           │
│cache write 5m        10,000                                                                             1%           │
│output                ≥2,504  2 req unknown                                                                           │
│hit rate               94.3%  ███████████████████████████████████████████████████████████████░░░░ of reusable prefix  │
│missed                97,000  rewritten · 8,083/req · 1 of 12 req reused nothing                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌CACHE REBUILDS────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│2 of 9 requests rewrote ≥50,000 tokens                                                                                │
│system prompt changed      1  ▬                                                                                       │
│new prefix / first turn    1  ▬                                                                                       │
│· ses-hot — system prompt changed (43,696 → 43,801 chars; block 1, in the last 8 bytes)                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌RATE & QUOTA──────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  requests ·················▄▄▄···▄▄▄███· 0.4/min                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
