src/tui/snapshots/toker__tui__view__tests__quota_frame_200x30.snap
---
source: src/tui/view.rs
expression: "rows.join(\"\\n\")"
---
last 30m · 1 session · 1 idle · 6 requests                                                                                                                                   last req no data · 12:34:56
┌SESSIONS──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│session                                                                                                                                                 ctx model reqs prompt now peak msgs ↺ out idle│
│-                                                                                                                                                         ? ?        6          ?    ?    - -   ?  10m│
│                                                                                                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌CONTEXT───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│-                                     ? / ?  idle 10m                                                                                                                                                 │
│                                                                                                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌TOKENS────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│fresh input               ≥0                                                                                                                                              0%  6 req unknown           │
│cache read                ≥0                                                                                                                                              0%  6 req unknown           │
│cache write 1h            ≥0                                                                                                                                              0%  6 req unknown           │
│cache write 5m            ≥0                                                                                                                                              0%  6 req unknown           │
│output                    ≥0  6 req unknown                                                                                                                                                           │
│hit rate                   ?  cache metrics unavailable for 6 req                                                                                                                                     │
│missed                    ≥0  known cache writes only                                                                                                                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌CACHE REBUILDS────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│no rebuild data yet                                                                                                                                                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌RATE & QUOTA──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  requests █··················▂·········· 0.2/min                                                                                                                                                     │
│  5-hour   ███████░░░░░░░░░░░░░░░  32%                                                                                                                                 resets 15:53 · gated · on track│
│  7-day    ██████████████████░░░░  80%                                                                                                                             resets Sun 12:53 · stops ~Thu 01:55│
│  overage  ██████████████░░░░░░░░  64%                                                                                                                            rejected  resets 10 Feb · estimating│
│  spent    today +6%  ·  30m <1%                                                                                                                                                                      │
│  binding  five_hour   overage IN USE                                                                                                                                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
